fixes: - larger main tabs - tree has no node links in load tab - tree has no buttons in load tab - result box in load tab gets scrollbars - when returning to the load tab, previous search remains but item is deselected and tree hidden - adjustments when swithin main tabs, so that original query is saved and overwritten when the load button was hit - reset main query when returning from the load tab but no query was selected - add query name parameter
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@9082 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWHalo/skins/QueryInterface/qi.css
+++ b/extensions/SMWHalo/skins/QueryInterface/qi.css
@@ -91,6 +91,16 @@ height:100%;
     border: 1px solid #AAAAAA;
     float:left;
 }
+
+.dragboxFloat{
+    float:left;
+    width:59%;
+    height: 300px;
+    border: 1px solid #AAAAAA;
+    float:left;
+    overflow: auto;
+}
+
 #boxcontent {
 width:100%;
 height: 230px;
@@ -506,6 +516,7 @@ cursor: pointer;
 	background-color:#fafafa;
 	border: 1px solid #AAAAAA;
 }
+
 .qiDefTabSpacer {
     padding: 2px;
     border-bottom: 1px solid #cacac4;
@@ -523,7 +534,9 @@ cursor: pointer;
 .qiDisabled {
     color: #AAAAAA;
 }
-
+.qiMainTabLabel {
+    font-size: larger;
+}
 #qistatus {
     padding-left: 5px;
 }
